Create Money class

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FF2895A1489C849CC16488B5B061C84F
 ProjectName=Third Person BP Game Template
+CopyrightNotice=Copyrlght liclem97.
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
